Initial Setup (#14)
* Initial Commit

* Initial Setup

* docs: add logo, badges, and installation section to README

- Added centered KETE hexagon logo at top
- Added badges: build status, latest release, license, Docker
- Added navigation links to docs, releases, quick starts
- Added Installation section with Docker and manual options
- Step-by-step guide for non-Docker deployments

* docs: remove Installation section from README (covered in User Guide)

* docs: use raw GitHub URL for logo image

* docs: use correct 128px logo image

* docs: remove Docker badge

* docs: remove license badge (already in README)

* docs: add Apache 2.0 license badge with correct label and link

* docs: point build badge to release workflow

* chore: remove v prefix from version numbers

* Initial Setup

* Initial Setup

* Initial Setup

* Initial Setup

* Initial Setup

* fix(stomp-artemis): Add STOMP anycast/multicast prefix configuration

- Create custom broker.xml with anycastPrefix=/queue/ and multicastPrefix=/topic/ on STOMP acceptor
- Update Dockerfile to copy broker.xml to etc-override
- Update docker-compose.yml and check-event-reception.ps1 for Jolokia API

Fixes STOMP message routing to create ANYCAST queues instead of MULTICAST addresses.

* docs(stomp): Add Artemis broker configuration documentation

- Add ActiveMQ Artemis example tab with warning to stomp.md
- Add comprehensive Artemis Configuration section explaining anycastPrefix
- Update support-matrix.md with Artemis STOMP configuration note
- Minimize broker.xml to essential 47 lines

The anycastPrefix=/queue/ configuration is critical for STOMP+Artemis
to create ANYCAST queues instead of MULTICAST addresses.

* Initial Setup

* Initial Setup

* Initial Setup

* Initial Setup

* Initial Setup

* Initial Setup

* Initial Setup

---------

Signed-off-by: Fortune Ngwenya <fortunengwenya@gmail.com>